# qpSWIFT

./: .asv  .gitignore  CITATION.cff  CMakeLists.txt  README.md
demo/: Matrices.h  runqp.c  runqpcpp.cpp
demo/deprc/: Matrices.h  runqp.c  runqpcpp.cpp
doc/: qpSWIFT_doxyfile
doc/html/: Auxilary_8c.html  Auxilary_8c.js  Auxilary_8c__incl.map  Auxilary_8c__incl.md5  Auxilary_8h.html  Auxilary_8h.js  Auxilary_8h__dep__incl.map  Auxilary_8h__dep__incl.md5  Auxilary_8h__incl.map  Auxilary_8h__incl.md5  Auxilary_8h_source.html  CodeGen__Prime_8h_source.html  GlobalOptions_8h.html  GlobalOptions_8h.js  GlobalOptions_8h__dep__incl.map  GlobalOptions_8h__dep__incl.md5  GlobalOptions_8h__incl.map  GlobalOptions_8h__incl.md5  GlobalOptions_8h_source.html  Matrices_8h_source.html  SuiteSparse__config_8h_source.html  amd_8h_source.html  amd__internal_8h_source.html  annotated.html  annotated_dup.js  classes.html  customdoxygen.css  dir_000001_000000.html  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b6c2a257bfab6380ca9b3cb94b12cb25.html  dir_b6c2a257bfab6380ca9b3cb94b12cb25_dep.map  dir_b6c2a257bfab6380ca9b3cb94b12cb25_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  files.js  files_dup.js  functions.html  (+60 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  (+35 more)
include/: Auxilary.h  CMakeLists.txt  CodeGen_Prime.h  GlobalOptions.h  SuiteSparse_config.h  Test_file.txt  amd_internal.h  ldl.h  qpSWIFT.h  timer.h
matlab/: README.txt  Swift_make.m  basic_test.m  demoqp.m  qpSWIFT.m  qpSWIFT.mexa64  qpSWIFT.mexmaci64  qpSWIFT.mexw64  qpSWIFT_mex.c  syntax_test.m  test_1.m  test_2.m  test_3.m
matlab/prototype code/: customQP_PredCorr_full.m  customQP_PredCorr_full_mod.m  findsteplength.m  my_Trans_multiply_diag.m  my_inverse_diag_matrix.m  qpSWIFT_checkinputs.m  qpSWIFT_init.m  qpSWIFT_matlab.m  test1.m
python/: Matrix.mat  README.txt  basic_test.py  demoqp.py  memcheckqp.py  pyqpSWIFT.c  qpSWIFT_help.rst  setup.py  syntax.py  test.py
simulink/: README.txt  Swift_make.m  Swift_sfunc.c  Swift_sfunc_e.c  Swift_sfunc_e_V60.c  demoqp.slx  demoqp_e.slx  qpSWIFT_sfunc.c  qpSWIFT_sfunc.mexa64  qpSWIFT_sfunc.mexw64  qpSWIFT_sfunc_e.c  qpSWIFT_sfunc_e.mexa64  qpSWIFT_sfunc_e.mexw64
simulink/slprj/_jitprj/: jitEngineAccessInfo.mat  s6GdbrOj9IqjiVro2wWciNH.mat  sQJTN3oXvxpCVkPJughbiPC.l  sQJTN3oXvxpCVkPJughbiPC.mat  sYQAr064xR0HoN0aidOcSxC.mat  sZRyLUfIYQXOC4KpiaIKHlG.l  sZRyLUfIYQXOC4KpiaIKHlG.mat  sb6ymKGxYyJlLYnBIlmRHUB.mat  slhECS8XTb6tN52Q0OS5ZtF.l  slhECS8XTb6tN52Q0OS5ZtF.mat
simulink/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s6GdbrOj9IqjiVro2wWciNH.mat  sQJTN3oXvxpCVkPJughbiPC.mat  sYQAr064xR0HoN0aidOcSxC.mat  sZRyLUfIYQXOC4KpiaIKHlG.mat  sb6ymKGxYyJlLYnBIlmRHUB.mat  slhECS8XTb6tN52Q0OS5ZtF.mat
simulink/slprj/_sfprj/demoqp/: amsi_serial.mat
simulink/slprj/_sfprj/demoqp/_self/sfun/info/: binfo.mat
simulink/slprj/_sfprj/demoqp_e/: amsi_serial.mat
simulink/slprj/_sfprj/demoqp_e/_self/sfun/info/: binfo.mat
simulink/slprj/_sfprj/precompile/: 40yLdjq2ZUTzhsP62KyHnB.mat  6THst58LTZ3XXofN9o4uoC.mat  SRZDZsLY9gBYyFzbZfWaJC.mat  T2S2JqErz2QSCpisy2zga.mat  T2zaiEWMIQZGH5BEvSogHD.mat  autoInferAccessInfo.mat  jDqCJRDPsCH85xdLWkDUQF.mat  p4etcktaS1N9CXoHcek6BF.mat  yDOiLyCbF3jGcTyIpoxSqC.mat  zsrBUmp245QipewgHSHtkC.mat
src/: Auxilary.c  CMakeLists.txt  amd_order.c  ldl.c  qpSWIFT.c  timer.c
tests/: CMakeLists.txt  Test_Requirements.txt  gen_std_alone.py  parser.cpp  stdaln.cpp  stdalnT.cpp  stdalnTT.cpp  test.cpp  todo.md
tests/include/: parser.hpp  test.hpp  test_data_structures.hpp
